<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>
    <groupId>com.pholser</groupId>
    <artifactId>property-binder</artifactId>
    <version>4.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>property-binder</name>
    <description>Enables typed retrieval of properties based on an annotated interface</description>
    <url>http://pholser.github.com/property-binder</url>
    <licenses>
        <license>
            <name>The MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git://github.com/pholser/property-binder.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/pholser/property-binder.git</developerConnection>
        <url>http://github.com/pholser/property-binder</url>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>http://github.com/pholser/property-binder/issues</url>
    </issueManagement>
    <developers>
        <developer>
            <id>pholser</id>
            <name>Paul Holser</name>
            <email>pholser@alumni.rice.edu</email>
            <url>http://www.pholser.com</url>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.19.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant</artifactId>
            <version>1.10.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>1.10</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.scm</groupId>
                <artifactId>maven-scm-provider-gitexe</artifactId>
                <version>1.8.1</version>
            </extension>
            <extension>
                <groupId>org.apache.maven.scm</groupId>
                <artifactId>maven-scm-manager-plexus</artifactId>
                <version>1.8.1</version>
            </extension>
            <extension>
                <groupId>org.kathrynhuxtable.maven.wagon</groupId>
                <artifactId>wagon-gitsite</artifactId>
                <version>0.3.1</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>com.pholser.propertybinder</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.9.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>paste-examples</id>
                        <phase>post-site</phase>
                        <configuration>
                            <tasks>
                                <property name="project.version" value="${project.version}" />
                                <property name="java.io.tmpdir" value="${java.io.tmpdir}" />
                                <property name="example.resources.dir" value="${basedir}/src/test/resources" />
                                <property name="example.src.dir" value="${project.build.testSourceDirectory}" />
                                <property name="example.class.path" refid="maven.test.classpath" />
                                <property name="website.staging.dir" value="${project.reporting.outputDirectory}" />
                                <ant antfile="paste-examples.xml" target="-paste-examples" />
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <source>11</source>
                    <show>public</show>
                    <excludePackageNames>com.pholser.util.properties.internal:com.pholser.util.properties.internal.*
                    </excludePackageNames>
                    <detectJavaApiLink>false</detectJavaApiLink>
                    <links>
                        <link>http://docs.oracle.com/en/java/javase/11/docs/api/</link>
                    </links>
                    <bottom>
                        <![CDATA[<i>&copy; Copyright 2009-2021 Paul R. Holser, Jr. All rights reserved. Licensed under The MIT License. pholser@alumni.rice.edu</i>]]></bottom>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.2.2</version>
                <configuration>
                    <threshold>Low</threshold>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <distributionManagement>
        <site>
            <id>github-project-site</id>
            <url>gitsite:git@github.com/pholser/property-binder.git</url>
        </site>
    </distributionManagement>
</project>
